--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,10 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": ["src"],
-  "exclude": ["./dist"],
-
+  "exclude": ["node_modules", "dist"],
+  "paths": {
+    "@ugursahinkaya/*": ["../*"]
+  },
   "references": [
     {
       "path": "./tsconfig.config.json"
